--- a/client/templates/mobile-footer.hbs
+++ b/client/templates/mobile-footer.hbs
@@ -1,2 +1,2 @@
-<span class="open-dictionary">Show my translations</span>
+<span class="open-dictionary">{{ i18n 'Show my translations'}}</span>
 <div class="open-settings"><img class="open-settings-gear" src="/img/gear.png"></div>
