--- a/client/templates/settings.hbs
+++ b/client/templates/settings.hbs
@@ -1,6 +1,6 @@
-<h3 class="settings-header">My settings<span class="close-cross"></span></h3>
+<h3 class="settings-header">{{ i18n 'My settings' }}<span class="close-cross"></span></h3>
 <div class="settings-content">
-    <h4 class="functions-news-title">News Sources</h4>
+    <h4 class="functions-news-title">{{ i18n 'News Sources'}}</h4>
     <div class="functions-settings-news">
                 <div class="functions-box">
                     <input type="checkbox" value="cnn.com" class="functions-checkbox-settings" id="cnn">
