--- a/client/templates/dictionary.hbs
+++ b/client/templates/dictionary.hbs
@@ -1,3 +1,3 @@
 <div class="dictionary"></div>
-<div class="word-delete">Delete selected</div>
-<div class="word-cancel">Cancel</div>
+<div class="word-delete">{{i18n 'Delete selected'}}</div>
+<div class="word-cancel">{{i18n 'Cancel'}}</div>
