--- a/client/templates/restore.hbs
+++ b/client/templates/restore.hbs
@@ -1,16 +1,16 @@
 <div class="sign">
-    <div class="sign-in">Sign In</div>
-    <div class="sign-up">Sign Up</div>
+    <div class="sign-in">{{i18n 'Sign In'}}</div>
+    <div class="sign-up">{{i18n 'Sign Up'}}</div>
     <div class="social">
-        <a href="/auth/facebook"><button class="fb-btn sign-btn"><span class="btn-text-first">Sign in with Facebook</span></button></a>
-        <a href="/auth/twitter"><button class="tw-btn sign-btn"><span class="btn-text">Sign in with Twitter</span></button></a>
+        <a href="/auth/facebook"><button class="fb-btn sign-btn"><span class="btn-text-first">{{i18n 'Sign in with Facebook'}}</span></button></a>
+        <a href="/auth/twitter"><button class="tw-btn sign-btn"><span class="btn-text">{{i18n 'Sign in with Twitter'}}</span></button></a>
     </div>
-    <div class="or-icon"><span>or</span></div>
+    <div class="or-icon"><span>{{i18n 'or'}}</span></div>
     <div class="login-m-form">
         <form method='post'>
             <input type="text" name="username" class="login-m-form-login login-input" placeholder="Email">
             <div class="form-error hidden"></div>
         </form>
     </div>
-    <div class="sign-login">Restore</div>
+    <div class="sign-login">{{i18n 'Restore'}}</div>
 </div>
