Fixed dictionary word deletion

--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -26,4 +26,4 @@
             <button type="button" name="button" class="button button word-cancel">{{i18n 'Cancel'}}</button>
         </div>
     </div>
-</section>
+</section>client/templates/dictionary-section.hbs
