--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Upvoc</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="/css/myapp.css" rel="stylesheet">
 </head>
 
